# dengue-data-engine

./: .gitignore  CMakeLists.txt  README.MD  main.py  requeriments.txt  requirements.txt
backend/: test.cpp
backend/data/bins/: .idx202512index  .idx202601index  .idx202602index  .idx202603index  .idx202604index  .idx202605index  .idx202606index
backend/engine/: bin_file_manager.h  binary_search.h  case_indexer.h  case_mapper.h  case_sorter.h  dengue_case.h  file_manager.h  indexer.h  mapper.h  sorter.h  sorting.h
backend/integration/: dados_abertos.py
backend/models/: dengue_case.h
backend/models_bindings/: dengue_case.cpp
backend/modules/: case_sorter.cpp  dengue.cpp  dengue_case.cpp  engine.cpp  sorter_binding.h  sorter_trampoline.h
backend/modules/bindings/: bind_bin_file_manager.h  bind_binary_search.h  bind_case_indexer.h  bind_case_sorter.h  bind_sorting.h
backend/modules/trampolines/: case_sorter_trampoline.h  sorting_trampoline.h
backend/routers/: dengue_cases.py  dengue_router.py
backend/services/: csv_list_converter.py  csv_loader.py  csv_normalizer.py  data_logger.py  dataset.py  dataset_builder.py  dataset_fetcher.py  dataset_forecaster.py  dataset_importer.py  dataset_searcher.py  dataset_storer.py  factory.py  importer.py  loader.py  mapper.py  normalizer.py
backend/services/utils/: date_utils.py
scripts/: manage_dataset.py
